--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,8 @@
   );
 
   /* Misc Colors */
-  --bannerColor: #A7FFA4;
+  --bannerColor: #a7ffa4;
+  --planCardText: var(--primaryColorGreen100);
 }
 
 [data-theme="dark"] {
@@ -69,16 +70,21 @@
   --tertiaryColor: var(--primaryColorGreen900);
 
   /* Text Color */
-  --headerText: var(--primaryColorGreen900);
+  --headerText: var(--primaryColor);
   --bodyText: var(--primaryColorNeutral300);
 
   /* Background color */
   --primaryBackgroundColor: var(--primaryColorGreen100);
-  --backgroundAssetOne: linear-gradient(170deg ,var(--primaryColorBlack) 35%, #000 70%);
+  --backgroundAssetOne: linear-gradient(
+    170deg,
+    var(--primaryColorBlack) 35%,
+    #000 70%
+  );
   --backgroundAssetTwo: #000;
 
   /* Misc Colors */
   --bannerColor: #000;
+  --planCardText: var(--primaryColorGreen900);
 
   /* --------------------------------------------------------- */
 }
@@ -175,8 +181,6 @@ button {
 }
 
 .btn-two {
-  width: 9.4375rem;
-  height: 3.5rem;
   color: var(--primaryBackgroundColor);
   font-weight: 700;
   border-radius: 0.5rem;
@@ -186,6 +190,67 @@ button {
     var(--primaryColorGreen) 78.37%,
     var(--primaryColorGreen800) 100%
   );
+  padding: 15px 30px;
+  text-align: center;
+  font-size: 0.75em;
+  width: auto;
+  transition: 0.3s ease;
+  border: 1px solid transparent;
+}
+
+.btn-two-dark {
+  background: 0 0;
+  border: 1px solid #444;
+  border-radius: 5px;
+  box-shadow: 0 2px 0 #000;
+  color: var(--primaryColor);
+  text-shadow: 0 -1px 0 #000;
+  width: auto;
+  animation: glow 0.8s ease-out infinite alternate;
+}
+
+@keyframes glow {
+  0% {
+    border-color: var(--primaryColor);
+    box-shadow: 0 0 5px rgba(67, 255, 92, 0.2),
+      inset 0 0 5px rgba(73, 255, 67, 0.1), 0 2px 0 #000;
+  }
+
+  15% {
+    border-color: var(--primaryColor);
+    box-shadow: 0 0 10px rgba(158, 255, 67, 0.6),
+      inset 0 0 10px rgba(67, 183, 255, 0.4), 0 2px 0 #000;
+  }
+
+  16% {
+    border-color: transparent;
+    box-shadow: 0 0 20px transparent, inset 0 0 10px transparent,
+      0 2px 0 transparent;
+  }
+
+  17% {
+    border-color: var(--primaryColor);
+    box-shadow: 0 0 5px rgba(67, 255, 214, 0.2), 
+      inset 0 0 5px rgba(89, 255, 67, 0.1), 0 2px 0 #000;
+  }
+
+  20% {
+    border-color: var(--primaryColor);
+    box-shadow: 0 0 10px rgba(73, 255, 67, 0.6),
+      inset 0 0 10px rgba(67, 255, 123, 0.4), 0 2px 0 #000;
+  }
+
+  30% {
+    border-color: var(--primaryColor);
+    box-shadow: 0 0 5px rgba(67, 255, 108, 0.2),
+      inset 0 0 5px rgba(27, 255, 141, 0.1), 0 2px 0 #000;
+  }
+
+  100% {
+    border-color: var(--primaryColor);
+    box-shadow: 0 0 10px rgba(67, 255, 83, 0.6),
+      inset 0 0 10px rgba(73, 255, 67, 0.4), 0 2px 0 #000;
+  }
 }
 
 /* Toggle container styles */
@@ -215,7 +280,11 @@ button {
 }
 
 .toggler-container-dark {
-  background: linear-gradient(90deg, #43b7ff 0%, #00ddf6 100%);
+  background: linear-gradient(
+    90deg,
+    var(--primaryColor) 0%,
+    var(--primaryColor) 100%
+  );
   border: none;
 }
 
