--- a/src/components/blog/Blog.module.css
+++ b/src/components/blog/Blog.module.css
@@ -26,6 +26,10 @@
   padding: 0 1.62rem;
 }
 
+.blog-card-dark{
+  background-color: #1b1b1b;
+}
+
 .blog-card img {
   width: 100%;
   height: 9.375rem;
