--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -50,120 +50,451 @@ header {
   height: 50%;
   width: 100%;
   left: 0;
-  border: 1px solid violet;
+  /* border: 1px solid violet; */
 }
 
-.shooting-star{
+.universe-two{
   position: absolute;
-        right: 50%;
-        top: -13.59%;
-        width: 1px;
-        height: 70px;
-        background: #fff;
-        -webkit-transform: rotate(-52deg);
-        -ms-transform: rotate(-52deg);
-        transform: rotate(-52deg);
-        -webkit-animation: shootingStar;
-        animation: shootingStar;
-        -webkit-animation-duration: 9s;
-        animation-duration: 9s;
-        -webkit-animation-iteration-count: infinite;
-        animation-iteration-count: infinite;
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-        -webkit-animation-delay: 1s;
-        animation-delay: 1s
+  width: 100%;
+  height: 40%;
+  left: 0!important;
+  top: 1%!important;
+  -webkit-transform: scaleX(-1);
+  -ms-transform: scaleX(-1);
+  transform: scaleX(-1);
+  /* border: 1px solid green; */
+}
+
+.universe-one .shooting-star {
+  position: absolute;
+  right: 50%;
+  top: -13.59%;
+  width: 1px;
+  height: 70px;
+  background: #fff;
+  transform: rotate(-52deg);
+  animation: shootingStar;
+  animation-duration: 9s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in;
+  animation-delay: 1s;
 }
 
 @keyframes shootingStar {
   0% {
-      top: -13.59%;
-      right: 60%
+    top: -13.59%;
+    right: 60%;
   }
 
   2% {
-      opacity: 0;
-      top: 100%;
-      right: 0
+    opacity: 0;
+    top: 100%;
+    right: 0;
   }
 
   86% {
-      opacity: 0
+    opacity: 0;
   }
 
   100% {
-      opacity: 0
+    opacity: 0;
   }
 }
 
-.star2{
+.universe-one .star2 {
   top: -23.59%;
-        -webkit-animation: shootingStar2;
-        animation: shootingStar2;
-        -webkit-animation-duration: 10s;
-        animation-duration: 10s;
-        -webkit-animation-iteration-count: infinite;
-        animation-iteration-count: infinite;
-        -webkit-animation-timing-function: ease-in;
-        animation-timing-function: ease-in;
-        -webkit-animation-delay: 1.5s;
-        animation-delay: 1.5s
+  animation: shootingStar2;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in;
+  animation-delay: 1.5s;
 }
 
 @keyframes shootingStar2 {
   0% {
-      top: -23.59%;
-      right: 50%
+    top: -23.59%;
+    right: 50%;
   }
 
   2% {
-      opacity: 0;
-      top: 100%;
-      right: -17%
+    opacity: 0;
+    top: 100%;
+    right: -17%;
   }
 
   86% {
-      opacity: 0
+    opacity: 0;
   }
 
   100% {
-      opacity: 0
+    opacity: 0;
   }
 }
 
-.satellite{
-  width: 10px!important;
-    position: absolute;
-    top: 10%;
-    left: 0;
-    -webkit-animation-name: orbit;
-    animation-name: orbit;
-    -webkit-animation-duration: 11s;
-    animation-duration: 11s;
-    -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards
+.satellite {
+  width: 10px !important;
+  position: absolute;
+  top: 10%;
+  left: 0;
+  animation-name: orbit;
+  animation-duration: 11s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+.universe-two .satellite{
+  animation-delay: 10s;
+  left: -10%
 }
 
 @keyframes orbit {
   0% {
-      top: 10%;
-      left: 0;
-      -webkit-transform: rotate(0);
-      transform: rotate(0)
+    top: 10%;
+    left: 0;
+    transform: rotate(0);
   }
 
   100% {
-      top: -40%;
-      left: 120%;
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg)
+    top: -40%;
+    left: 120%;
+    transform: rotate(360deg);
   }
 }
 
+.star {
+  position: absolute;
+  opacity: 0.5;
+}
+
+.universe .star:nth-child(4) {
+  top: 17%;
+  left: 5%;
+  animation: starFlicker;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 0.8s;
+}
+
+.universe-one .star:nth-child(5) {
+  top: 11%;
+  right: 19%;
+  animation: starFlicker;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 0.2s;
+}
+
+.universe-one .star:nth-child(6) {
+  top: 4%;
+  right: 24%;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 0.9s;
+}
+
+.universe-one .star:nth-child(7) {
+  top: 3%;
+  left: 29%;
+  animation: starFlicker;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 1.2s;
+}
+
+.universe-one .star:nth-child(8) {
+  top: 18%;
+  left: 56%;
+}
+
+.universe-one .star:nth-child(9) {
+  top: 31%;
+  left: 57%;
+  animation: starFlicker;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 0.1s;
+}
+
+.universe-one .star:nth-child(10) {
+  top: 27%;
+  left: 12%;
+  animation: starFlicker;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 0.2s;
+}
+
+.universe-one .star:nth-child(11) {
+  top: 7%;
+  right: 31%;
+  animation: starFlicker;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 1.4s;
+}
+
+.universe-one .star:nth-child(12) {
+  top: 35%;
+  right: 12%;
+  animation: starFlicker;
+  animation-duration: 4.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 1.1s;
+}
+
+.universe-one .star:nth-child(13) {
+  top: 12%;
+  right: 25%;
+  animation: starFlicker;
+  animation-duration: 3.3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 0.7s;
+}
+
+.universe-two .star:nth-child(2) {
+  top: 1.3%;
+  left: 48%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: .5s;
+  animation-delay: .5s
+}
+
+.universe-two .star:nth-child(3) {
+  top: 20%;
+  left: 36%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 4s;
+  animation-duration: 4s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s
+}
+
+.universe-two .star:nth-child(4) {
+  top: 17%;
+  left: 5%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 4s;
+  animation-duration: 4s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: .8s;
+  animation-delay: .8s
+}
+
+.universe-two .star:nth-child(5) {
+  top: 11%;
+  right: 19%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 4s;
+  animation-duration: 4s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: .2s;
+  animation-delay: .2s
+}
+
+.universe-two .star:nth-child(6) {
+  top: 4%;
+  right: 24%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: .9s;
+  animation-delay: .9s
+}
+
+.universe-two .star:nth-child(7) {
+  top: 3%;
+  left: 29%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 5s;
+  animation-duration: 5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.2s;
+  animation-delay: 1.2s
+}
+
+.universe-two .star:nth-child(8) {
+  top: 18%;
+  left: 56%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: .4s;
+  animation-delay: .4s
+}
+
+.universe-two .star:nth-child(9) {
+  top: 31%;
+  left: 57%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 4s;
+  animation-duration: 4s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: .1s;
+  animation-delay: .1s
+}
+
+.universe-two .star:nth-child(10) {
+  top: 27%;
+  left: 12%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 4s;
+  animation-duration: 4s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: .2s;
+  animation-delay: .2s
+}
+
+.universe-two .star:nth-child(11) {
+  top: 7%;
+  right: 31%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.4s;
+  animation-delay: 1.4s
+}
+
+.universe-two .star:nth-child(12) {
+  top: 35%;
+  right: 12%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 4.5s;
+  animation-duration: 4.5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.1s;
+  animation-delay: 1.1s
+}
+
+.universe-two .star:nth-child(13) {
+  top: 12%;
+  right: 25%;
+  -webkit-animation: starFlicker;
+  animation: starFlicker;
+  -webkit-animation-duration: 3.3s;
+  animation-duration: 3.3s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-delay: .7s;
+  animation-delay: .7s
+}
+
+.universe2 .star:nth-child(7) {
+  top: -10%!important
+}
+
+.universe2 .star:nth-child(2) {
+  top: -15%!important
+}
+
+@keyframes starFlicker {
+  0% {
+    opacity: 0.2;
+  }
+
+  50% {
+    opacity: 0.8;
+  }
+
+  100% {
+    opacity: 0.2;
+  }
+}
 
 .background-piece-one-container {
   position: absolute;
@@ -173,7 +504,7 @@ header {
   height: 100%;
 }
 
-.background-container-dark { 
+.background-container-dark {
   background: rgba(0, 40, 60, 0.3);
 }
 
