--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -42,15 +42,13 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  /* border: 9px solid orange; */
-  color: antiquewhite;
+  border: 9px solid orange;
 }
 
 .universe-one {
   height: 50%;
   width: 100%;
   left: 0;
-  /* border: 1px solid violet; */
 }
 
 .universe-two{
@@ -59,10 +57,19 @@ header {
   height: 40%;
   left: 0!important;
   top: 1%!important;
-  -webkit-transform: scaleX(-1);
   -ms-transform: scaleX(-1);
   transform: scaleX(-1);
-  /* border: 1px solid green; */
+}
+
+.universe-three{
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  left: 10%!important;
+  top: 0!important;
+  -ms-transform: scaleY(-1);
+  transform: scaleY(-1)
+
 }
 
 .universe-one .shooting-star {
@@ -273,213 +280,273 @@ header {
 .universe-two .star:nth-child(2) {
   top: 1.3%;
   left: 48%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 2s;
   animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: .5s;
   animation-delay: .5s
 }
 
 .universe-two .star:nth-child(3) {
   top: 20%;
   left: 36%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 4s;
   animation-duration: 4s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: 1s;
   animation-delay: 1s
 }
 
 .universe-two .star:nth-child(4) {
   top: 17%;
   left: 5%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 4s;
   animation-duration: 4s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: .8s;
   animation-delay: .8s
 }
 
 .universe-two .star:nth-child(5) {
   top: 11%;
   right: 19%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 4s;
   animation-duration: 4s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: .2s;
   animation-delay: .2s
 }
 
 .universe-two .star:nth-child(6) {
   top: 4%;
   right: 24%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 3s;
   animation-duration: 3s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: .9s;
   animation-delay: .9s
 }
 
 .universe-two .star:nth-child(7) {
   top: 3%;
   left: 29%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 5s;
   animation-duration: 5s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: 1.2s;
   animation-delay: 1.2s
 }
 
 .universe-two .star:nth-child(8) {
   top: 18%;
   left: 56%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 3s;
   animation-duration: 3s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: .4s;
   animation-delay: .4s
 }
 
 .universe-two .star:nth-child(9) {
   top: 31%;
   left: 57%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 4s;
   animation-duration: 4s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: .1s;
   animation-delay: .1s
 }
 
 .universe-two .star:nth-child(10) {
   top: 27%;
   left: 12%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 4s;
   animation-duration: 4s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: .2s;
   animation-delay: .2s
 }
 
 .universe-two .star:nth-child(11) {
   top: 7%;
   right: 31%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 3s;
   animation-duration: 3s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: 1.4s;
   animation-delay: 1.4s
 }
 
 .universe-two .star:nth-child(12) {
   top: 35%;
   right: 12%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 4.5s;
   animation-duration: 4.5s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: 1.1s;
   animation-delay: 1.1s
 }
 
 .universe-two .star:nth-child(13) {
   top: 12%;
   right: 25%;
-  -webkit-animation: starFlicker;
   animation: starFlicker;
-  -webkit-animation-duration: 3.3s;
   animation-duration: 3.3s;
-  -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  -webkit-animation-delay: .7s;
   animation-delay: .7s
 }
 
-.universe2 .star:nth-child(7) {
+.universe-two .star:nth-child(7) {
   top: -10%!important
 }
 
-.universe2 .star:nth-child(2) {
+.universe-two .star:nth-child(2) {
   top: -15%!important
+}
+
+.universe-three .star:nth-child(2) {
+  top: 1.3%;
+  left: 48%;
+  animation: starFlicker;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: .5s
+}
+
+.universe-three .star:nth-child(3) {
+  top: 20%;
+  left: 36%;
+  animation: starFlicker;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 1s
+}
+
+.universe-three .star:nth-child(4) {
+  top: 17%;
+  left: 5%;
+  animation: starFlicker;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: .8s
+}
+
+.universe-three .star:nth-child(5) {
+  top: 11%;
+  right: 19%;
+  animation: starFlicker;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: .2s
+}
+
+.universe-three .star:nth-child(6) {
+  top: 4%;
+  right: 24%;
+  animation: starFlicker;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: .9s
+}
+
+.universe-three .star:nth-child(7) {
+  top: 3%;
+  left: 29%;
+  animation: starFlicker;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 1.2s
+}
+
+.universe-three .star:nth-child(8) {
+  top: 18%;
+  left: 56%;
+  animation: starFlicker;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: .4s
+}
+
+.universe-three .star:nth-child(9) {
+  top: 31%;
+  left: 57%;
+  animation: starFlicker;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: .1s
+}
+
+.universe-three .star:nth-child(10) {
+  top: 27%;
+  left: 12%;
+  animation: starFlicker;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: .2s
+}
+
+.universe-three .star:nth-child(11) {
+  top: 7%;
+  right: 31%;
+  animation: starFlicker;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 1.4s
+}
+
+.universe-three .star:nth-child(12) {
+  top: 35%;
+  right: 12%;
+  animation: starFlicker;
+  animation-duration: 4.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 1.1s
+}
+
+.universe-three .star:nth-child(13) {
+  top: 12%;
+  right: 25%;
+  animation: starFlicker;
+  animation-duration: 3.3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: .7s
 }
 
 @keyframes starFlicker {
