--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,7 @@
 
 /* Body styles */
 body {
+  background-color: var(--primaryBackgroundColor);
   font-family: var(--font);
   scroll-behavior: smooth;
   color: var(--bodyText);
@@ -114,6 +115,7 @@ section {
   max-width: 65rem;
   width: 100%;
   height: 100%;
+  padding: 0 2%;
 }
 
 /* List styles */
