--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -159,6 +159,7 @@
   .logo-container {
     margin-top: 1rem;
     height: 3.125rem;
+    min-width: 0;
   }
 
   .nav-buttons {
@@ -171,7 +172,9 @@
   }
 
   .after-dark {
-    top: 2.8875rem;
+    top: 3rem;
+    left: 65px;
+
   }
   
   .after-dark span {
@@ -180,7 +183,7 @@
 
   .hamburger-menu{
     display: block;
-    margin-top: 2.5rem;
+    margin-top: 3rem;
   }
 
   .button-text {
