--- a/src/components/whatWeOffer/WhatWeOffer.module.css
+++ b/src/components/whatWeOffer/WhatWeOffer.module.css
@@ -42,3 +42,13 @@
   margin-bottom: 1rem;
   color: var(--headerText);
 }
+
+@media screen and (max-width: 1024px) {
+  .cards {
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+  }
+
+
+}
