--- a/src/components/customerPlanOptions/CustomerPlanOptions.module.css
+++ b/src/components/customerPlanOptions/CustomerPlanOptions.module.css
@@ -6,6 +6,16 @@
   background-color: transparent;
 }
 
+.background-blend{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primaryBackgroundColor);
+  z-index: -1;
+}
+
 .customer-plan-options-content {
   height: 100%;
 }
@@ -153,4 +163,38 @@
 .plan button {
   position: absolute;
   bottom: 1.44rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .customer-plan-options {
+    height: auto;
+    background-color: none;
+  }
+
+  .plan-options {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  margin-bottom: 19.24rem;
+
+  }
+
+  .plan {
+    padding: 0 2.19rem;
+    border: 1px solid var(--primaryColorNeutral600);
+    border-radius: 4px;
+    margin-top: 1rem;
+  }
+
+  .plan:nth-child(2) {
+    transform: scale(1);
+    z-index: none;
+    box-shadow: none;
+
+  }
+
+  .plan-dark:nth-child(2){
+    box-shadow: 0px 0px 15px 0px var(--primaryColor);
+  
+  }
 }
