--- a/src/App.css
+++ b/src/App.css
@@ -323,3 +323,9 @@ button {
   left: 15px;
   transition: 0.3s ease;
 }
+
+@media screen and (max-width: 1024px){
+  button {
+    max-width: 11.9578125rem;
+  }
+}
