--- a/src/components/portfolio/Portfolio.module.css
+++ b/src/components/portfolio/Portfolio.module.css
@@ -1,9 +1,9 @@
+/* Base styles for the portfolio section */
 .portfolio {
   position: relative;
   min-height: 53.75rem;
   width: 100%;
   padding-bottom: 10rem;
-
 }
 
 .portfolio-content {
@@ -14,6 +14,7 @@
   margin-top: 4.05rem;
   display: flex;
   justify-content: space-between;
+  gap: 2rem;
 }
 
 .portfolio-card {
@@ -25,9 +26,10 @@
   border-bottom: 4px solid var(--primaryColor);
   box-shadow: 0px 0px 25px 15px rgba(0, 0, 0, 0.08);
   padding: 0 1.62rem;
+  justify-content: center;
 }
 
-.portfolio-card-dark{
+.portfolio-card-dark {
   background-color: #1b1b1b;
   border-bottom: 4px solid var(--primaryColor);
   box-shadow: 0 0 15px -5px var(--primaryColor);
@@ -36,10 +38,15 @@
   border-left: 1px solid var(--primaryColor);
 }
 
-.portfolio-card img {
+.image-container {
   width: 16.05506rem;
   height: 8.75rem;
-  margin-top: 3.66rem;
+  margin-top: 0;
+}
+
+.portfolio-card img {
+  width: 100%;
+  height: auto;
 }
 
 .portfolio-card h3 {
@@ -56,4 +63,50 @@
   width: 15.8125rem;
   margin: 1.75rem 0 3.62rem;
   color: var(--bodyText);
+}
+
+/* Media query for screens with a max width of 1024px */
+@media screen and (max-width: 1024px) {
+  .portfolios {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+  }
+
+  .portfolio-card {
+    width: 100%;
+    height: auto;
+    padding: 2rem;
+  }
+
+  .image-container {
+    align-self: center;
+    max-width: 22.1175rem;
+    max-height: 12.0384rem;
+    width: 100%;
+    height: auto;
+  }
+
+  .portfolio-card img {
+    height: auto;
+  }
+
+  .portfolio-card p {
+    width: 100%;
+  }
+
+  .portfolio-card:nth-child(1) {
+    grid-column: span 2;
+  }
+}
+
+/* Additional media query for even smaller screens */
+@media screen and (max-width: 768px) {
+  .portfolios {
+    grid-template-columns: 1fr;
+  }
+
+  .portfolio-card:nth-child(1) {
+    grid-column: span 1;
+  }
 }
