--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ section {
   max-width: 65rem;
   width: 100%;
   height: 100%;
-  padding: 0 4%;
+  padding: 0 0; 
 }
 
 /* List styles */
@@ -325,7 +325,17 @@ button {
 }
 
 @media screen and (max-width: 1024px){
+  .container {
+    padding: 0 6%; 
+  }
+
   button {
     max-width: 11.9578125rem;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .container {
+    padding: 0 4%; 
   }
 }
