--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,7 @@ body {
   background-color: var(--primaryBackgroundColor);
   font-family: var(--font);
   color: var(--bodyText);
+  min-width: 425px;
   
 }
 
@@ -115,7 +116,7 @@ section {
   max-width: 65rem;
   width: 100%;
   height: 100%;
-  padding: 0 0; 
+  padding: 0 2%; 
 }
 
 /* List styles */
@@ -332,9 +333,31 @@ button {
   button {
     max-width: 11.9578125rem;
   }
+
+  .btn-one {
+    color: var(--primaryTextColor);
+    width: 9.5475rem;
+height: 2.625rem;
+    border-radius: 3px;
+    font-weight: 700;
+    padding: 3.75px 7.5px;
+    text-align: center;
+    font-size: 0.75em;
+    transition: 0.3s ease;
+  }
 }
 
 @media screen and (max-width: 768px){
+  h1 {
+    font-size: 2.75rem;
+    font-weight: 700;
+  }
+
+h2{
+  font-size: 1.75rem;
+  font-weight: 800;
+}
+
   .container {
     padding: 0 4%; 
   }
