--- a/src/components/spaceContent/SpaceContent.module.css
+++ b/src/components/spaceContent/SpaceContent.module.css
@@ -1,9 +1,9 @@
 .space-content {
   position: absolute;
-  top: 0;
+  top: -10px;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 25rem;
 }
 
 .universe-one {
