--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@
   --bannerColor: #a7ffa4;
   --planCardText: var(--primaryColorGreen100);
   --blobColor: var(--primaryColor);
+  --bodyColor: var(--primaryColorGreen900);
 }
 
 [data-theme="dark"] {
@@ -87,19 +88,19 @@
   /* Misc Colors */
   --bannerColor: #000;
   --planCardText: var(--primaryColorGreen900);
-  --blobColor: var(--primaryColorGreen200)
-
+  --blobColor: var(--primaryColorGreen200);
+  --bodyColor: var(--primaryColorGreen100);
 
   /* --------------------------------------------------------- */
 }
-.App{
-  
+.App {
 }
 
 /* Body styles */
 body {
   font-family: var(--font);
   color: var(--bodyText);
+  background: var(--primaryColorGreen100);
 }
 
 /* Section styles */
